testsuite/tests/th/T24572c.stderr
T24572c.hs:7:2: error: [GHC-55017]
    Illegal data constructor name: ‘->’
    When splicing a TH declaration: data D = (->)

